# Fundamentals-25-26

./: .gitignore  pyproject.toml  sweep.sh  sweep.yaml
cfg/: base.yaml
cfg/block/: conv.yaml  deconv.yaml
cfg/decoder/: deconv.yaml
cfg/embed/: conv.yaml
cfg/fc_block/: fc_layer.yaml
cfg/net/: default.yaml
cfg/optimizer/: adam.yaml
cfg/rnn_block/: lstm.yaml
cfg/unembed/: lazy_linear.yaml
src/: AE.py  experiment.py
src/dataset/: datasets.py  loaders.py
src/loso/: loso.py  loso_script.py
src/net/: base.py  cnn.py  eda.py  lstm.py  mlp.py  rnn.py
src/no_paper/: base.py  chat_loader.py  cnn_complex.py  old_loader.py
wandb/: latest-run
wandb/run-20251202_194054-cykntihc/: run-cykntihc.wandb
wandb/run-20251202_234803-3po14te2/: run-3po14te2.wandb
wandb/run-20251202_235939-j5s6lwxb/: run-j5s6lwxb.wandb
wandb/run-20251203_001100-rqufby6k/: run-rqufby6k.wandb
wandb/run-20251203_001732-q7ewyp3c/: run-q7ewyp3c.wandb
wandb/run-20251203_002300-bl6mxlqw/: run-bl6mxlqw.wandb
wandb/run-20251203_002416-1bz7eanb/: run-1bz7eanb.wandb
wandb/run-20251203_002743-47rrodha/: run-47rrodha.wandb
wandb/run-20251203_003809-42tnpiir/: run-42tnpiir.wandb
wandb/run-20251203_004229-szz4ux3c/: run-szz4ux3c.wandb
wandb/run-20251203_005604-qlvxkj4p/: run-qlvxkj4p.wandb
wandb/run-20251203_010742-gsf2ws2e/: run-gsf2ws2e.wandb
wandb/run-20251203_011526-somgxyzq/: run-somgxyzq.wandb
wandb/run-20251203_011843-52ahlprn/: run-52ahlprn.wandb
wandb/run-20251203_012422-bu1pcyvp/: run-bu1pcyvp.wandb
wandb/run-20251203_012712-sqsfqgdk/: run-sqsfqgdk.wandb
(+98 files in other folders)
